fixed spacing

--- a/client/src/components/Jumbotron/Jumbotron.css
+++ b/client/src/components/Jumbotron/Jumbotron.css
@@ -5,6 +5,7 @@
   background-position: bottom;
   background-size: cover;
   background-color: black;
+  width: 100%;
 }
 
 div.jumbotron h4 {
